add x and threads

--- a/internal/views/product.html
+++ b/internal/views/product.html
@@ -37,6 +37,14 @@
           <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path fill="currentColor" d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2Zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5a4.25 4.25 0 0 0 4.25-4.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5ZM12 7.25a4.75 4.75 0 1 1 0 9.5 4.75 4.75 0 0 1 0-9.5Zm0 1.5a3.25 3.25 0 1 0 0 6.5 3.25 3.25 0 0 0 0-6.5Zm5.25-.88a1.12 1.12 0 1 1 0 2.25 1.12 1.12 0 0 1 0-2.25Z"/></svg>
           <span>Instagram</span>
         </button>
+        <button type="button" class="share-btn sb-x" data-share="x" title="Compartir en X" aria-label="Compartir en X">
+          <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path fill="currentColor" d="M3 3h4.3L14 11.1 19.7 3H21l-6.2 8.9L21 21h-4.3L10 12.9 4.3 21H3l6.2-8.9L3 3Z"/></svg>
+          <span>X</span>
+        </button>
+        <button type="button" class="share-btn sb-threads" data-share="threads" title="Compartir en Threads" aria-label="Compartir en Threads">
+          <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path fill="currentColor" d="M12.01 2c5.52 0 9.99 4.47 9.99 9.99S17.53 22 12.01 22 2.02 17.53 2.02 11.99 6.49 2 12.01 2Zm3.65 10.18c.02-.2.03-.41.03-.62 0-3.16-2.17-5.26-5.66-5.26-1.52 0-2.88.46-3.81 1.12l.86 1.55c.74-.5 1.76-.86 2.89-.86 2.06 0 3.37 1.15 3.56 3.03-1.02-.47-2.21-.63-3.28-.63-2.63 0-4.56 1.3-4.56 3.58 0 2.13 1.69 3.61 4.06 3.61 1.41 0 2.56-.48 3.32-1.24.51.83 1.38 1.32 2.49 1.32h1.47v-1.68h-1.2c-.63 0-1.02-.3-1.19-.91.5-.6.82-1.36.92-2.01ZM10.3 15.9c-1.34 0-2.24-.7-2.24-1.86 0-1.2 1.02-1.98 2.77-1.98.98 0 1.97.2 2.83.66-.25 1.86-1.56 3.18-3.36 3.18Z"/></svg>
+          <span>Threads</span>
+        </button>
         <button type="button" class="share-btn sb-copy" data-share="copy" title="Copiar enlace" aria-label="Copiar enlace">
           <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false"><path fill="currentColor" d="M8 3a3 3 0 0 1 3-3h10a3 3 0 0 1 3 3v10a3 3 0 0 1-3 3h-2v-2h2a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1H11a1 1 0 0 0-1 1v2H8V3Zm-5 5a3 3 0 0 1 3-3h10a3 3 0 0 1 3 3v10a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V8Zm3-1a1 1 0 0 0-1 1v10a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1V8a1 1 0 0 0-1-1H6Z"/></svg>
           <span>Copiar</span>
