--- a/internal/views/layout.html
+++ b/internal/views/layout.html
@@ -33,9 +33,9 @@
 <header class="topbar">
   <div class="container row between center">
     <a href="/" class="brand">
-      <img src="/public/assets/img/chroma-logo.png" alt="Croma 3D" class="brand-logo" width="64" height="64" loading="lazy" />
+      <img src="/public/assets/img/chroma-logo.png" alt="Chroma3D" class="brand-logo" width="64" height="64" loading="lazy" />
       <span class="brand-text">
-        <span class="brand-title">Croma 3D</span>
+        <span class="brand-title">Chroma3D</span>
         <span class="brand-sub">Impresión 3D • Mayorista y minorista</span>
       </span>
     </a>
